--- a/index.html
+++ b/index.html
@@ -8,12 +8,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="m-5 border border-primary p-5">
+    <div class="m-5 border border-primary p-5 ">
         <h1 class="text-primary">How are you</h1>
+        <h3 class="text-primary">I am missing you</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis exercitationem voluptate ullam, magnam ex nulla nesciunt, qui quidem impedit sed animi nostrum repellat ab repellendus est quos temporibus laborum alias?</p>
         <a href="" class="btn btn-primary">Click to more</a>
         <a href="" class="btn btn-primary">Read Me</a>
-    
+        <br>
+        <h1 class="display-3">How are you</h1>
+
+        <div class="progress mb-2">
+            <div class="progress-bar " role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="progress mb-2">
+            <div class="progress-bar bg-info" role="progressbar" aria-label="Basic example" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="progress mb-2">
+            <div class="progress-bar bg-info" role="progressbar" aria-label="Basic example" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="progress mb-2">
+            <div class="progress-bar bg-warning" role="progressbar" aria-label="Basic example" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="progress mb-2">
+            <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
     </div>
 </body>
 </html>
