--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3 class="text-primary">I am missing you</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis exercitationem voluptate ullam, magnam ex nulla nesciunt, qui quidem impedit sed animi nostrum repellat ab repellendus est quos temporibus laborum alias?</p>
         <a href="" class="btn btn-primary">Click to more</a>
-        <a href="" class="btn btn-primary">Read Me</a>
+        <a href="" class="btn btn-outline-primary">Read Me</a>
         <br>
         <h1 class="display-3">How are you</h1>
 
@@ -32,6 +32,35 @@
         <div class="progress mb-2">
             <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
+    <hr>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="..." class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
     </div>
+
 </body>
 </html>
