--- a/animation.html
+++ b/animation.html
@@ -7,10 +7,30 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <style>
+        .square-box {
+            width: 100px;
+            height: 100px;
+            background-color: rgb(90, 19, 19);
+            position: relative;
+        }
+        .square-box::before {
+            width: 50px;
+            height: 50px;
+            background-image: linear-gradient(rgb(13, 126, 64), skyblue);
+            position: absolute;
+        }
+    </style>
+
 </head>
 <body>
     <div class="p-5 animate__animated animate__bounce">
         <img class="w-25 rounded" src="./images/shiroe1.jpg" alt="">
+    </div>
+
+    <div class="square-box">
+
     </div>
 </body>
 </html>
